...
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">CycleStreets</string>
    <string name="settings">Settings</string>
    <string name="logoff">Login\\Logoff</string>
    <string name="about">About</string>
    <string name="blog">Blog</string>
    <string name="go">Find route</string>
    <string name="addvia">Add waypoint</string>
    <string name="blog_cyclestreets_update">CycleStreets blog update</string>
    <string name="blog_update">Blog update</string>
    <string name="rba_start">Start marker</string>
    <string name="rba_finish">Finish marker</string>
    <string name="rba_waypoint">Waypoint %d</string>
    <string name="confirm_new_route">Start a new route?</string>

    <!-- Map menu -->
    <string name="ic_menu_directions">Plan a route</string>
    <string name="ic_menu_saved_routes">Saved routes</string>
    <string name="ic_menu_route_number">Open route by number</string>
    <string name="ic_menu_findplace">Find place</string>
    <string name="ic_menu_settings">Settings</string>
    <string name="ic_menu_open">Open</string>
    <string name="ic_menu_rename">Rename</string>
    <string name="ic_menu_edit">Edit</string>
    <string name="ic_menu_delete">Delete</string>
...
