<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">

	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="5.0">
      <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
          android:padding="4.0dip">
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="  "/>
        <TextView
        android:id="@+id/registration_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=" "/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="  "/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Your name"/>
        <EditText
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textCapWords|textPersonName"/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Your email address"/>
        <EditText
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
      android:inputType="textEmailAddress"/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=" "/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Desired username"/>
        <EditText
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="text"/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Desired password"/>
        <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"/>
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Confirm password"/>
        <EditText
        android:id="@+id/confirm_password"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"/>
      </LinearLayout>
    </ScrollView>

	<LinearLayout
      android:orientation="horizontal" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="bottom">
    <View
	android:layout_width="0.0dip"
	android:layout_height="fill_parent"
	android:layout_weight="1"/>				
    <Button android:text="Register" 
	    android:id="@+id/register_button" 
	    android:layout_height="wrap_content" 
	    android:layout_weight="1" 
	    android:layout_width="0dip"/>
  </LinearLayout>       
</LinearLayout>
